tests/fixtures/LatestTests/ObjectTests/errors/assign_primitive_to_object.fg
/; EXPECT_ERROR: AssignmentExpressionTypeMismatch
type Person = {
    name: str
    age: int
}

var p: Person
var x: int = 10

p = x

